--- a/css/reset.css
+++ b/css/reset.css
@@ -37,6 +37,11 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+img{
+	display:inline-block;
+	width:100%;
+	max-width:100%;
+}
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
