--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,7 @@
 .time {
   font-size: 16px;
   line-height: 20px;
+  color:#7f7f7f;
 }
 .product-list-container {
   background-color: #fff;
@@ -392,16 +393,16 @@
 }
 
 .product-list-block {
-  flex: 0 0 70%;
-  max-width: 70%;
+  flex: 0 0 78%;
+  max-width: 78%;
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 8%);
   padding: 0;
   background-color: #fff;
 }
 .ad-block {
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 8%);
-  flex: 0 0 calc(30% - 12px);
-  max-width: calc(30% - 12px);
+  flex: 0 0 calc(22% - 12px);
+  max-width: calc(22% - 12px);
   padding: 6px;
   margin-left: 12px;
   background-color: #fff;
